<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/uploadImageFragment"
        android:icon="@drawable/ic_upload"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/uploadHistoryFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/title_upload_history" />
</menu>